--- a/WebSites/Petshopv2/css/main.css
+++ b/WebSites/Petshopv2/css/main.css
@@ -1273,6 +1273,7 @@ outline: 0;
   border-top: 4px solid #FFF;
 }
 
+/* --- NEW ADDED STYLES ---*/
 
 .centerbutton {
   text-align:center;
@@ -1291,3 +1292,96 @@ outline: 0;
   align-self:center;
 
 }
+
+/* --- BIG BUTTONS ---*/
+
+#bigbutton {
+  text-align:center;
+  vertical-align: middle;
+  width: 25%;
+
+}
+
+#bigbutton td {
+  width: 25%;
+
+}
+
+input.bigbutton {
+  width: 60px;  height: 30px;
+  white-space: normal;
+}
+
+/* Hover Buttons */
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 2px 2px;
+    width: 150px;
+    height: 50px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 13px;
+    margin: 2px 1px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #4CAF50;
+}
+
+.button1:hover {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.button2 {
+    background-color: #4f8db3; 
+    color: white; 
+    border: 2px solid #008CBA;
+}
+
+.button2:hover {
+    background-color: white;
+    color: black;
+}
+
+.button3 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #f44336;
+}
+
+.button3:hover {
+    background-color: #f44336;
+    color: white;
+}
+
+.button4 {
+    background-color: white;
+    color: black;
+    border: 2px solid #e7e7e7;
+}
+
+.button4:hover {background-color: #e7e7e7;}
+
+.button5 {
+    background-color: white;
+    color: black;
+    border: 2px solid #555555;
+}
+
+.button5:hover {
+    background-color: #555555;
+    color: white;
+}
+
+/* end of Hover Buttons */
