--- a/WebSites/Petshopv2/components/bootstrap2/css/bootstrap.css
+++ b/WebSites/Petshopv2/components/bootstrap2/css/bootstrap.css
@@ -4629,7 +4629,7 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav > li > a:hover {
   color: #333333;
   text-decoration: none;
-  background-color: transparent;
+  background-color: #fff;
 }
 
 .navbar .nav > .active > a,
