--- a/WebSites/Petshopv2/MasterPage-Member.master
+++ b/WebSites/Petshopv2/MasterPage-Member.master
@@ -1,27 +1,39 @@
 ﻿<%@ Master Language="C#" MasterPageFile="~/MasterPage-1.master" AutoEventWireup="true" CodeFile="MasterPage-Member.master.cs" Inherits="MasterPage_Member" %>
 
 <asp:Content ID="Content1" ContentPlaceHolderID="head" Runat="Server">
+    <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+
+    <link rel="stylesheet" href="components/bootstrap2/css/bootstrap.css"/>
+ <link rel="stylesheet" href="components/bootstrap2/css/bootstrap-responsive.css"/>
+ <link rel="stylesheet" href="css/calendar.css"/>
 </asp:Content>
 <asp:Content ID="Content2" ContentPlaceHolderID="ContentPlaceHolder1" Runat="Server">
-     <!-- TOP MEMBER NAVBAR-->
+     <br /><br /><br /><br /><br />
+    <div class="container">
+
+        <!-- TOP MEMBER NAVBAR-->
         <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Hi, Admin</a>
+      <a class="navbar-brand" href="#">Hi, Johana</a>
     </div>
     <div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="Admin.aspx">Calendar</a></li>
-        <li><a href="DateSettings.aspx">Date Settings</a></li>
-        <li><a href="UserAccts.aspx">User Accounts</a></li>
-        <li><a href="Reports.aspx">Reports</a></li>
-        <li><a href="Account.aspx">My Account</a></li>
-        <li><a href="Invoice.aspx">Invoice</a></li>
-          <li><a href="BookPet.aspx">Book an Appointment</a></li>
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="UpcomingBook.aspx">Upcoming Bookings</a></li>
+        <li><a href="#">Cancelled Bookings</a></li>
+        <li><a href="#">Transaction History</a></li>
+        <li><a href="#">Register My Pet</a></li>
+        <li><a href="#">My Account</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-       <%--<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>--%>
-      </ul>
+      <%--<ul class="nav navbar-nav navbar-right">
+       <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+      </ul>--%>
     </div>
   </div>
 </nav>
