--- a/WebSites/Petshopv2/MasterPage-1.master
+++ b/WebSites/Petshopv2/MasterPage-1.master
@@ -56,7 +56,7 @@
                     <li class="active"><a href="Default.aspx">Home</a></li>
                     <li><a href="signup.aspx">Sign Up</a></li>
                     <li><a href="login.aspx">Log In</a></li>
-                    <li><a href="booknow.aspx">Book Now</a></li>
+                    <li><a href="BookAppointment.aspx">Book Now</a></li>
                     <li><a href="Admin.aspx">Admin Page</a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                     
