--- a/WebSites/Petshopv2/ChildMaster-Member.master
+++ b/WebSites/Petshopv2/ChildMaster-Member.master
@@ -6,18 +6,46 @@
 
 <asp:Content ID="Content1" ContentPlaceHolderID="head" Runat="Server">
     <style>
-        table {
-            height: 20px;
+
+            #daytable  td {
+                text-decoration: none;
+                display:block;
+                width:100%;
+                height:30px;
+                border-bottom: 1px dashed #cccccc;
+            }
+               
+            #daytable  td a:link {
+                text-decoration: none;
+                display:block;
+                width:100%;
+                height:100%;
+                background-color: #efefef;
+            }
+
+            #daytable td a:visited {
+                text-decoration: none;
+            }
+
+            #daytable td a:hover {
+                text-decoration: none;
+                display:block;
+                width:100%;
+                height:100%;
+                background-color: #808080;
+                color: white;
+            }
+
+            #daytable td a:active {
+                text-decoration: underline;
+            }
+
+            #popUpDiv { 
+            position:absolute; background:url(pop-back.jpg) no-repeat; width:400px; height:400px; border:5px solid #000; z-index: 9002; 
+
         }
 
-        table tr td {
-            height: 20px;
-        }
 
-        th {
-            text-align:center;
-        }
-        
     </style>
 
     <meta charset="utf-8">
