--- a/WebSites/Petshopv2/MasterPage-1.master
+++ b/WebSites/Petshopv2/MasterPage-1.master
@@ -31,7 +31,7 @@
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body>
+<body onload="popup('popUpDiv')">
 
     <form id="form1" runat="server">
     <div>
