--- a/WebSites/Petshopv2/ChildMaster-Member.master
+++ b/WebSites/Petshopv2/ChildMaster-Member.master
@@ -40,10 +40,13 @@
                 text-decoration: underline;
             }
 
-            #popUpDiv { 
-            position:absolute; background:url(pop-back.jpg) no-repeat; width:400px; height:400px; border:5px solid #000; z-index: 9002; 
+             #CancelTable td {
+                height:30px;
+            }
 
-        }
+             #UpcomingTable td {
+                height:30px;
+            }
 
 
     </style>
@@ -77,7 +80,7 @@
            <li><a href="TransHistory.aspx">Transaction History</a></li>
            <li><a href="RegisterAPet.aspx">Register My Pet</a></li>
            <li><a href="MemberAccount.aspx">My Account</a></li>
-            <li><a href="MemberAccount.aspx">Reports</a></li>
+           
          </ul>
       <%--<ul class="nav navbar-nav navbar-right">
        <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
