--- a/WebSites/Petshopv2/ChildMaster-Member.master
+++ b/WebSites/Petshopv2/ChildMaster-Member.master
@@ -48,6 +48,10 @@
                 height:30px;
             }
 
+             #UpcomingTable th {
+                height:35px;
+            }
+
 
     </style>
 
