--- a/WebSites/Petshopv2/ChildMaster-Admin.master
+++ b/WebSites/Petshopv2/ChildMaster-Admin.master
@@ -33,7 +33,7 @@
         <li><a href="AdminReports.aspx">Reports</a></li>
         <li><a href="AdminMyAcct.aspx">My Account</a></li>
         <li><a href="AdminInvoice.aspx">Invoice</a></li>
-        <li><a href="BookPet.aspx">Book an Appointment</a></li>
+        <li><a href="AdminBookPet.aspx">Book an Appointment</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <%--<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>--%>
@@ -51,5 +51,7 @@
   </asp:ContentPlaceHolder>
 </div>
       <!------end of Child ContentPlaceHolder------>
+
+        </div>
 </asp:Content>
 
