--- a/WebSites/Petshopv2/ChildMaster-Admin.master
+++ b/WebSites/Petshopv2/ChildMaster-Admin.master
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="components/bootstrap2/css/bootstrap.css"/>
  <link rel="stylesheet" href="components/bootstrap2/css/bootstrap-responsive.css"/>
  <link rel="stylesheet" href="css/calendar.css"/>
+ <link rel="stylesheet" href="css/invoice.css"/>
 </asp:Content>
 
 <asp:Content ID="Content2" ContentPlaceHolderID="ContentPlaceHolder1" Runat="Server">
